--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,45 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.body{
+    width: 100%;
+    height: calc(100vh - 75px);
+    background-color: red;
+}
+
+.playing{
+    width: 100%;
+    height: 75px;
+    background-color: blue;
+    z-index: 0;
+}
+
+.display-flex{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.sidebar{
+    width: 150px;
+    height: calc(100vh - 75px);
+    background-color: green;
+}
+
+main{
+    width: calc(100% - 150px);
+    height: calc(100vh - 75px); 
+}
+
+.playlists{
+    width: 100%;
+    height: calc(100vh - 75px);
+    overflow-y: scroll;
+    background-color: lightblue;
+}
+
+.test{
+    background-color: blueviolet;
+    width: 33%;
+    height: 150%;
+}
