--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,15 @@
     width: 100%;
     height: 75px;
     background-color: blue;
-    z-index: 0;
 }
 
 .display-flex{
     display: flex;
     flex-wrap: wrap;
+}
+
+.display-flex-no-wrap{
+    display: flex;
 }
 
 .sidebar{
@@ -44,4 +47,42 @@ main{
     background-color: blueviolet;
     width: 33%;
     height: 150%;
+}
+
+.margin-5{
+    margin: 5px;
+}
+
+.icon-sidebar{
+    width: 20px;
+}
+
+.align-center{
+    align-items: center;
+}
+
+.color-white{
+    color: white;
+}
+
+.bottom-0{
+    position: absolute;
+    bottom: 75px;
+}
+
+.icon-profile{
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.profile{
+    background-color: gray;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    position: relative;
 }
