--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,12 @@
 .body{
     width: 100%;
     height: calc(100vh - 75px);
-    background-color: red;
+}
+
+.row{
+    width: 100%;   
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .playing{
@@ -40,7 +45,7 @@ main{
     width: 100%;
     height: calc(100vh - 75px);
     overflow-y: scroll;
-    background-color: lightblue;
+    background-color: #141922;
 }
 
 .test{
@@ -68,6 +73,7 @@ main{
 .bottom-0{
     position: absolute;
     bottom: 75px;
+    z-index: 1;
 }
 
 .icon-profile{
@@ -85,4 +91,41 @@ main{
     height: 20px;
     border-radius: 50%;
     position: relative;
+}
+
+.col-16{
+    width: calc((100% / 6) - 20px);
+    height: 150%;
+}
+
+.space-between{
+    justify-content: space-around;
+}
+
+.album{
+    width: 100%;
+}
+
+.text-center{
+    text-align: center;
+}
+
+.color-gray{
+    color: #a3a3a3;
+}
+
+.show{
+    display: block;
+}
+
+.hidden{
+    display: none;
+}
+
+.product:hover .hidden{
+    display: block;
+}
+
+.product:hover .show{
+    display: none;
 }
