--- a/css/style.css
+++ b/css/style.css
@@ -114,18 +114,51 @@ main{
     color: #a3a3a3;
 }
 
-.show{
+.show {
     display: block;
 }
 
-.hidden{
+.hidden {
     display: none;
 }
 
-.product:hover .hidden{
-    display: block;
+.album-div {
+    position: relative;
 }
 
-.product:hover .show{
+.album {
+    max-width: 100%;
+    height: auto;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     display: none;
+}
+
+.album-div:hover .overlay {
+    display: flex;
+}
+
+.menu{
+    display: flex;
+    flex-wrap: wrap;
+    font-size: small;
+}
+
+ul{
+    list-style-type: none;
+}
+
+.menu li {
+    margin-left: 10px;
+    margin-right: 10px;
 }
